[#805] Name collisions: Change DMNContext to use TDRGElement instead of TNamedElement to reflect the invariants.